<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/smallBrush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/smallBrushDesc"
        android:src="@drawable/small"
        app:layout_constraintBottom_toTopOf="@id/mediumBrush"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/mediumBrush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mediumBrushDesc"
        android:src="@drawable/medium"
        app:layout_constraintBottom_toTopOf="@id/largeBrush"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smallBrush"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/largeBrush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/largeBrushDesc"
        android:src="@drawable/large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mediumBrush"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>